Fix horizontal scroll caused by scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -245,7 +245,7 @@ input[type="number"] {
 
 /* Hide scrollbar arrows and customize the scrollbar */
 ::-webkit-scrollbar {
-  width: 12px;
+  /*width: 12px;*/
   /* Width of the entire scrollbar */
 }
 
